--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -23,12 +26,9 @@ jobs:
       run: npm ci
 
     - name: Create Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        name: Release ${{ github.ref_name }}
         body: |
           ## What's Changed
           
@@ -37,13 +37,14 @@ jobs:
           ## Installation
           
           ```bash
-          npm install shopify-bulk-collections
+          npm install shopify-collection-bulk
           ```
           
           ## Usage
           
           ```bash
-          npx shopify-bulk-collections data/collections.csv
+          npx shopify-collection-bulk data/collections.csv
           ```
         draft: false
         prerelease: false
+        generate_release_notes: true
